# kamp

./: .gitignore  EDA.ipynb  EDA2.ipynb  LICENSE  README.md  config.py  main.py  pyproject.toml  requirements.txt  run.sh
configs/: best_params.json
data/: data.csv
scr/: planner_opt.py
src/: evaluator.py  features.py  forecast.py  metrics.py  plan_from_csv.py  planner.py  planner_opt.py  report_llm.py  utils.py
