[project]
name = "kamp"
version = "0.1.0"
description = "AgentFactory: 자율 생산 계획 AI 에이전트"
authors = [{ name = "채소연" }]
requires-python = ">=3.12,<3.13"

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=1.7.0",
    "ortools>=9.9.3963",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.7",
    "openai>=1.44.0",
    "python-dotenv>=1.0.1"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"